# vcs-classic-hid

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
audio-monitor/: Cargo.toml  README.md
audio-monitor/src/: main.rs
cat-mouse/: Cargo.toml  README.md
cat-mouse/src/: cat_mouse.rs  main.rs
simon/: Cargo.toml  README.md
simon/src/: gui.rs  main.rs  simon.rs
simulator/: Cargo.toml  README.md
simulator/src/: lib.rs
vcs-classic-hid/: .gitignore  Cargo.toml  README.md  build-header.sh  vcs-classic-hid.h
vcs-classic-hid/ffi-examples/: example.c
vcs-classic-hid/src/: ffi.rs  force_feedback.rs  input.rs  lib.rs
vcs-classic-hid/src/led/: anims.rs  mod.rs
