[package]
name = "vcs-classic-hid-audio-monitor"
publish = false
version = "0.1.0"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
edition = "2018"

[features]
jack = []

[dependencies]
anyhow = "1.0.40"
clap = { version = "4", features = ["cargo", "derive"]}
cpal = "0.15.2"
hound = "3.4.0"
num = "0.4.0"
spectrum-analyzer = "1.4.0"
vcs-classic-hid = { path = "../vcs-classic-hid/" }
