[package]
name = "vcs-classic-hid"
version = "0.1.0"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
edition = "2018"
description = "Custom access drivers for the Atari VCS classic controller"
keywords = ["atari-vcs", "atari", "vcs", "controller", "gamepad"]

[features]
default = ["linux-static-hidraw"]

linux-static-hidraw = ["hidapi/linux-static-hidraw"]
linux-static-libusb = ["hidapi/linux-static-libusb"]

[dependencies.hidapi]
version = "1.2.5"
default-features = false
