[package]
name = "vcs-classic-hid"
version = "0.1.0"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
edition = "2018"
description = "Custom drivers for the Atari VCS classic joystick"
keywords = ["atari", "vcs", "joystick", "controller", "gamepad"]
categories = ["hardware-support", "game-development"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Enet4/vcs-classic-hid"

[lib]
crate-type = ["lib", "dylib"]

[features]
default = ["linux-static-hidraw"]

linux-static-hidraw = ["hidapi/linux-static-hidraw"]
linux-static-libusb = ["hidapi/linux-static-libusb"]

[dependencies]
libc = "0.2.97"

[dependencies.hidapi]
version = "1.2.5"
default-features = false
